--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Yihao Chen, Li-Na He, Yuanzhe Zhang, Jingru Gong, Shuangbin Xu, Yuelong Shu, Di Zhang, Guangchuang Yu, Zhixiang Zuo" />
 
 
-<meta name="date" content="2024-06-19" />
+<meta name="date" content="2024-06-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -145,7 +145,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="0.1" data-path="index.html"><a href="index.html#introduction"><i class="fa fa-check"></i><b>0.1</b> 🔬 Introduction</a></li>
 <li class="chapter" data-level="0.2" data-path="index.html"><a href="index.html#the-workflow-of-tiger"><i class="fa fa-check"></i><b>0.2</b> 🏞 The workflow of tigeR</a></li>
 <li class="chapter" data-level="0.3" data-path="index.html"><a href="index.html#installation"><i class="fa fa-check"></i><b>0.3</b> 🛠️ Installation</a></li>
-<li class="chapter" data-level="0.4" data-path="index.html"><a href="index.html#function-overview"><i class="fa fa-check"></i><b>0.4</b> 🗺️ Function Overview</a></li>
+<li class="chapter" data-level="0.4" data-path="index.html"><a href="index.html#function-overview"><i class="fa fa-check"></i><b>0.4</b> 🗺️ Function overview</a></li>
 <li class="chapter" data-level="0.5" data-path="index.html"><a href="index.html#troubleshooting"><i class="fa fa-check"></i><b>0.5</b> 💥 Troubleshooting</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html"><i class="fa fa-check"></i><b>1</b> 📥 Load data into R environment</a>
@@ -154,7 +154,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.2" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html#obtain-data-from-tiger.data-package-recommended"><i class="fa fa-check"></i><b>1.2</b> Obtain data from tigeR.data package (recommended)</a></li>
 <li class="chapter" data-level="1.3" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html#obtain-data-from-tiger-web-server"><i class="fa fa-check"></i><b>1.3</b> Obtain data from tigeR web server</a></li>
 <li class="chapter" data-level="1.4" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html#obtain-data-from-experimenthub"><i class="fa fa-check"></i><b>1.4</b> Obtain data from ExperimentHub</a></li>
-<li class="chapter" data-level="1.5" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html#pre-processing-of-custom-data"><i class="fa fa-check"></i><b>1.5</b> Pre-processing of Custom Data</a></li>
+<li class="chapter" data-level="1.5" data-path="load-data-into-r-environment.html"><a href="load-data-into-r-environment.html#pre-processing-of-custom-data"><i class="fa fa-check"></i><b>1.5</b> Pre-processing of custom Data</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="batch-effect-correction.html"><a href="batch-effect-correction.html"><i class="fa fa-check"></i><b>2</b> 🖎🏻 Batch Effect Correction</a>
 <ul>
@@ -166,16 +166,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.2" data-path="biomarker-evaluation.html"><a href="biomarker-evaluation.html#differential-analysis"><i class="fa fa-check"></i><b>3.2</b> Differential analysis</a></li>
 <li class="chapter" data-level="3.3" data-path="biomarker-evaluation.html"><a href="biomarker-evaluation.html#suvival-analysis"><i class="fa fa-check"></i><b>3.3</b> Suvival analysis</a></li>
 <li class="chapter" data-level="3.4" data-path="biomarker-evaluation.html"><a href="biomarker-evaluation.html#calculate-comprehensive-signature-score"><i class="fa fa-check"></i><b>3.4</b> Calculate comprehensive signature score</a></li>
-<li class="chapter" data-level="3.5" data-path="biomarker-evaluation.html"><a href="biomarker-evaluation.html#assess-the-performance-of-signature"><i class="fa fa-check"></i><b>3.5</b> Assess the Performance of Signature</a></li>
+<li class="chapter" data-level="3.5" data-path="biomarker-evaluation.html"><a href="biomarker-evaluation.html#assess-the-performance-of-signature"><i class="fa fa-check"></i><b>3.5</b> Assess the performance of signature</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html"><i class="fa fa-check"></i><b>4</b> 🌱 Tumor Microenvironment Analysis</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#availiable-tme-analysis-method-in-tiger"><i class="fa fa-check"></i><b>4.1</b> Availiable TME Analysis Method in tigeR</a></li>
-<li class="chapter" data-level="4.2" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#derive-the-proportions-of-different-tme-cell-types"><i class="fa fa-check"></i><b>4.2</b> Derive the Proportions of Different TME Cell Types</a></li>
-<li class="chapter" data-level="4.3" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#visualization-and-comparing-the-cell-proportions"><i class="fa fa-check"></i><b>4.3</b> Visualization and Comparing the Cell Proportions</a></li>
-<li class="chapter" data-level="4.4" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#searching-for-key-cell-types-associated-with-immunotherapy-response"><i class="fa fa-check"></i><b>4.4</b> Searching for Key Cell Types Associated with Immunotherapy Response</a></li>
-<li class="chapter" data-level="4.5" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#generate-a-custom-reference-matrix-for-tme-deconvolution-from-single-cell-sequencing-data"><i class="fa fa-check"></i><b>4.5</b> Generate a Custom Reference Matrix for TME Deconvolution from Single-cell Sequencing Data</a></li>
-<li class="chapter" data-level="" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#more-details-about-tme-analysis"><i class="fa fa-check"></i>📝 More Details About TME Analysis</a></li>
+<li class="chapter" data-level="4.1" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#availiable-tme-analysis-method-in-tiger"><i class="fa fa-check"></i><b>4.1</b> Availiable TME analysis method in tigeR</a></li>
+<li class="chapter" data-level="4.2" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#derive-the-proportions-of-different-tme-cell-types"><i class="fa fa-check"></i><b>4.2</b> Derive the proportions of different TME cell types</a></li>
+<li class="chapter" data-level="4.3" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#visualization-and-comparing-the-cell-proportions"><i class="fa fa-check"></i><b>4.3</b> Visualization and comparing the cell proportions</a></li>
+<li class="chapter" data-level="4.4" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#searching-for-key-cell-types-associated-with-immunotherapy-response"><i class="fa fa-check"></i><b>4.4</b> Searching for key cell types associated with immunotherapy response</a></li>
+<li class="chapter" data-level="4.5" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#generate-a-custom-reference-matrix-for-tme-deconvolution-from-single-cell-sequencing-data"><i class="fa fa-check"></i><b>4.5</b> Generate a custom reference matrix for TME deconvolution from single-cell sequencing data</a></li>
+<li class="chapter" data-level="" data-path="tumor-microenvironment-analysis.html"><a href="tumor-microenvironment-analysis.html#more-details-about-tme-analysis"><i class="fa fa-check"></i>📝 More details about TME analysis</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="prediction-model-construction.html"><a href="prediction-model-construction.html"><i class="fa fa-check"></i><b>5</b> 🤖 Prediction Model Construction</a>
 <ul>
@@ -206,7 +206,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">tigeR: Tumor Immunotherapy Gene Expression Data Analysis R package</h1>
 <p class="author"><em>Yihao Chen, Li-Na He, Yuanzhe Zhang, Jingru Gong, Shuangbin Xu, Yuelong Shu, Di Zhang, Guangchuang Yu, Zhixiang Zuo</em></p>
-<p class="date"><em>2024-06-19</em></p>
+<p class="date"><em>2024-06-20</em></p>
 </div>
 <div id="getting-start-with-tiger" class="section level1 unnumbered hasAnchor">
 <h1>📖 <strong>Getting start with tigeR</strong><a href="#getting-start-with-tiger" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -245,7 +245,7 @@ for (package in packages) {
 devtools::install_github(&quot;YuLab-SMU/tigeR&quot;)</code></pre>
 </div>
 <div id="function-overview" class="section level2 hasAnchor" number="0.4">
-<h2><span class="header-section-number">0.4</span> 🗺️ Function Overview<a href="#function-overview" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<h2><span class="header-section-number">0.4</span> 🗺️ Function overview<a href="#function-overview" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><strong>Data Loading</strong></p>
 <p>Dataloader(): load data online (ExperimentHub or TIGER Web Server).</p>
 <p><strong>Batch Effect Correction</strong>
@@ -255,7 +255,7 @@ remove_BE(): perform batch effect removal.</p>
 <p>roc_biomk(): generate a Receiver Operating Characteristic (ROC) object and a curve to assess the predictive performance.</p>
 <p>diff_biomk(): plot differential result (Responder vs Non-Responder or Pre-Treatment vs Post-Treatment).</p>
 <p>surv_biomk(): calculate hazard ratios, 95% confidence intervals and P value of cox-ph analysis as well as plot Kaplan-Meier curves.</p>
-<p>compare_biomk(): generate a heatmap of signature AUC of datasets to compare the performance of biomarkers of interest with built-in biomarkers。</p>
+<p>compare_biomk(): generate a heatmap of signature AUC of datasets to compare the performance of biomarkers of interest with built-in biomarkers.</p>
 <p>browser_biomk(): generate an integration diagram comprising a bar plot representing AUC and a dot plot denoting Hazard Ratio and P-value.</p>
 <p>integrate_analysis(): perform differential expression analysis and survival analysis.</p>
 <p><strong>TME Deconvolution</strong></p>
@@ -278,7 +278,7 @@ remove_BE(): perform batch effect removal.</p>
 </div>
 <div id="troubleshooting" class="section level2 hasAnchor" number="0.5">
 <h2><span class="header-section-number">0.5</span> 💥 Troubleshooting<a href="#troubleshooting" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Please report bugs in <a href="https://github.com/YuLab-SMU/tigeR/issues">Github issue</a>.</p>
+<p>If you think the instruction on this website is unclear or encounter a problem while operating the tigeR package, please post to our <a href="https://github.com/YuLab-SMU/tigeR/issues">Github issue</a>.</p>
 
 </div>
 </div>
